--- a/SOWEDANE/Views/User/Login.cshtml
+++ b/SOWEDANE/Views/User/Login.cshtml
@@ -115,7 +115,7 @@
             </div>
             <button class="btn" type="submit">Login</button>
         }
-        <a href="#" class="btn-link">Forgot your password?</a>
+      @*  <a href="#" class="btn-link">Forgot your password?</a>*@
         <a href="/user/create" class="btn-link">Register!</a>
     </div>
     
